deploy postgres
