# server/cmd/api/docs/swagger.json
@@ -216,6 +216,45 @@
                 }
             }
         },
+        "/environments/{id}/databases": {
+            "post": {
+                "tags": [
+                    "environment"
+                ],
+                "summary": "Deploy database to environment",
+                "operationId": "deployDatabase",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "X-User-ID",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Environment ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Deploy Database",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.DeployDatabase"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/me": {
             "get": {
                 "tags": [
@@ -471,19 +510,6 @@
         }
     },
     "definitions": {
-        "domain.ClusterStatus": {
-            "type": "string",
-            "enum": [
-                "pending",
-                "running",
-                "deleted"
-            ],
-            "x-enum-varnames": [
-                "ClusterPending",
-                "ClusterRunning",
-                "ClusterDeleted"
-            ]
-        },
         "request.CreateCluster": {
             "type": "object",
             "required": [
@@ -548,6 +574,33 @@
                 }
             }
         },
+        "request.Database": {
+            "type": "string",
+            "enum": [
+                "postgres"
+            ],
+            "x-enum-varnames": [
+                "Postgres"
+            ]
+        },
+        "request.DeployDatabase": {
+            "type": "object",
+            "required": [
+                "database"
+            ],
+            "properties": {
+                "database": {
+                    "enum": [
+                        "postgres"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/request.Database"
+                        }
+                    ]
+                }
+            }
+        },
         "response.Cluster": {
             "type": "object",
             "required": [
@@ -578,11 +631,24 @@
                     ],
                     "allOf": [
                         {
-                            "$ref": "#/definitions/domain.ClusterStatus"
+                            "$ref": "#/definitions/response.ClusterStatus"
                         }
                     ]
                 }
             }
+        },
+        "response.ClusterStatus": {
+            "type": "string",
+            "enum": [
+                "pending",
+                "running",
+                "deleted"
+            ],
+            "x-enum-varnames": [
+                "ClusterStatusPending",
+                "ClusterStatusRunning",
+                "ClusterStatusDeleted"
+            ]
         },
         "response.Environment": {
             "type": "object",
