# server/internal/domain/value/cluster.go
@@ -4,22 +4,20 @@ import (
 	"starliner.app/internal/domain/entity"
 )
 
+type ClusterStatus string
+
+const (
+	ClusterStatusPending ClusterStatus = "pending"
+	ClusterStatusRunning ClusterStatus = "running"
+	ClusterStatusDeleted ClusterStatus = "deleted"
+)
+
 type Cluster struct {
 	Id             int64
 	Name           string
-	Status         entity.ClusterStatus
+	Status         ClusterStatus
 	IPv4Address    *string
 	OrganizationId int64
-}
-
-func NewCluster(c *entity.Cluster) *Cluster {
-	return &Cluster{
-		Id:             c.Id,
-		Name:           c.Name,
-		Status:         c.Status,
-		IPv4Address:    c.IPv4Address,
-		OrganizationId: c.OrganizationId,
-	}
 }
 
 func NewClusters(cs []*entity.Cluster) []*Cluster {
@@ -28,4 +26,27 @@ func NewClusters(cs []*entity.Cluster) []*Cluster {
 		clusters[i] = NewCluster(c)
 	}
 	return clusters
+}
+
+func NewCluster(c *entity.Cluster) *Cluster {
+	return &Cluster{
+		Id:             c.Id,
+		Name:           c.Name,
+		Status:         mapStatus(c.Status),
+		IPv4Address:    c.IPv4Address,
+		OrganizationId: c.OrganizationId,
+	}
+}
+
+func mapStatus(s entity.ClusterStatus) ClusterStatus {
+	switch s {
+	case entity.ClusterPending:
+		return ClusterStatusPending
+	case entity.ClusterRunning:
+		return ClusterStatusRunning
+	case entity.ClusterDeleted:
+		return ClusterStatusDeleted
+	default:
+		return "unknown"
+	}
 }
