# server/internal/infrastructure/nats/impl/queue/queue.go
@@ -2,8 +2,8 @@ package queue
 
 import (
 	natsgo "github.com/nats-io/nats.go"
-	"starliner.app/internal/domain/entity"
 	"starliner.app/internal/domain/port"
+	"starliner.app/internal/domain/value"
 	"starliner.app/internal/infrastructure/nats"
 	v1 "starliner.app/internal/infrastructure/nats/proto/v1"
 	"strconv"
@@ -13,30 +13,30 @@ const (
 	BuildTriggered nats.Subject = "build.triggered"
 	CreateCluster  nats.Subject = "create.cluster"
 	DeleteCluster  nats.Subject = "delete.cluster"
-	CreateProject  nats.Subject = "create.project"
+	DeployDatabase nats.Subject = "deploy.database"
 )
 
 type Queue struct {
-	buildPublisher    *nats.Publisher[*v1.Build]
-	clusterPublisher  *nats.Publisher[*v1.Cluster]
-	projectPublisher  *nats.Publisher[*v1.Project]
-	buildSubscriber   *nats.Subscriber[*v1.Build]
-	clusterSubscriber *nats.Subscriber[*v1.Cluster]
-	projectSubscriber *nats.Subscriber[*v1.Project]
+	buildPublisher       *nats.Publisher[*v1.Build]
+	clusterPublisher     *nats.Publisher[*v1.Cluster]
+	deploymentPublisher  *nats.Publisher[*v1.Deployment]
+	buildSubscriber      *nats.Subscriber[*v1.Build]
+	clusterSubscriber    *nats.Subscriber[*v1.Cluster]
+	deploymentSubscriber *nats.Subscriber[*v1.Deployment]
 }
 
 func NewQueue(js natsgo.JetStreamContext) port.Queue {
 	return &Queue{
-		buildPublisher:    nats.NewPublisher[*v1.Build](js),
-		clusterPublisher:  nats.NewPublisher[*v1.Cluster](js),
-		projectPublisher:  nats.NewPublisher[*v1.Project](js),
-		buildSubscriber:   nats.NewSubscriber[*v1.Build](js),
-		clusterSubscriber: nats.NewSubscriber[*v1.Cluster](js),
-		projectSubscriber: nats.NewSubscriber[*v1.Project](js),
+		buildPublisher:       nats.NewPublisher[*v1.Build](js),
+		clusterPublisher:     nats.NewPublisher[*v1.Cluster](js),
+		deploymentPublisher:  nats.NewPublisher[*v1.Deployment](js),
+		buildSubscriber:      nats.NewSubscriber[*v1.Build](js),
+		clusterSubscriber:    nats.NewSubscriber[*v1.Cluster](js),
+		deploymentSubscriber: nats.NewSubscriber[*v1.Deployment](js),
 	}
 }
 
-func (q *Queue) PublishBuildTriggered(build *entity.Build) error {
+func (q *Queue) PublishBuildTriggered(build *value.BuildMessage) error {
 	return q.buildPublisher.Publish(BuildTriggered, build.Id, &v1.Build{
 		Id:             build.Id,
 		Organization:   build.Organization,
@@ -48,7 +48,7 @@ func (q *Queue) PublishBuildTriggered(build *entity.Build) error {
 	})
 }
 
-func (q *Queue) PublishCreateCluster(cluster *entity.Cluster) error {
+func (q *Queue) PublishCreateCluster(cluster *value.ClusterMessage) error {
 	return q.clusterPublisher.Publish(CreateCluster, strconv.FormatInt(cluster.Id, 10), &v1.Cluster{
 		Id:             cluster.Id,
 		Name:           cluster.Name,
@@ -56,7 +56,7 @@ func (q *Queue) PublishCreateCluster(cluster *entity.Cluster) error {
 	})
 }
 
-func (q *Queue) PublishDeleteCluster(cluster *entity.Cluster) error {
+func (q *Queue) PublishDeleteCluster(cluster *value.ClusterMessage) error {
 	return q.clusterPublisher.Publish(DeleteCluster, strconv.FormatInt(cluster.Id, 10), &v1.Cluster{
 		Id:             cluster.Id,
 		Name:           cluster.Name,
@@ -64,18 +64,26 @@ func (q *Queue) PublishDeleteCluster(cluster *entity.Cluster) error {
 	})
 }
 
-func (q *Queue) PublishCreateProject(project *entity.Project) error {
-	return q.projectPublisher.Publish(CreateProject, strconv.FormatInt(project.Id, 10), &v1.Project{
-		Id:             project.Id,
-		Name:           project.Name,
-		OrganizationId: project.OrganizationId,
-		ClusterId:      *project.ClusterId,
+func (q *Queue) PublishDeployDatabase(deployment *value.DeploymentMessage) error {
+	var valueToProto = map[value.Database]v1.DatabaseType{
+		value.Postgres: v1.DatabaseType_POSTGRES,
+	}
+	protoDB := func() v1.DatabaseType {
+		if db, ok := valueToProto[deployment.Database]; ok {
+			return db
+		}
+		return v1.DatabaseType_UNSPECIFIED
+	}()
+
+	return q.deploymentPublisher.Publish(DeployDatabase, "*", &v1.Deployment{
+		ClusterId: deployment.ClusterId,
+		Database:  protoDB,
 	})
 }
 
-func (q *Queue) SubscribeToBuildTriggered(handler func(build *entity.Build)) error {
+func (q *Queue) SubscribeToBuildTriggered(handler func(build *value.BuildMessage)) error {
 	return q.buildSubscriber.Subscribe(BuildTriggered, "*", "buildTriggered", func(build *v1.Build) {
-		handler(&entity.Build{
+		handler(&value.BuildMessage{
 			Id:             build.Id,
 			Organization:   build.Organization,
 			Project:        build.Project,
@@ -87,9 +95,9 @@ func (q *Queue) SubscribeToBuildTriggered(handler func(build *entity.Build)) err
 	})
 }
 
-func (q *Queue) SubscribeToCreateCluster(handler func(cluster *entity.Cluster)) error {
+func (q *Queue) SubscribeToCreateCluster(handler func(cluster *value.ClusterMessage)) error {
 	return q.clusterSubscriber.Subscribe(CreateCluster, "*", "createCluster", func(cluster *v1.Cluster) {
-		handler(&entity.Cluster{
+		handler(&value.ClusterMessage{
 			Id:             cluster.Id,
 			Name:           cluster.Name,
 			OrganizationId: cluster.OrganizationId,
@@ -97,9 +105,9 @@ func (q *Queue) SubscribeToCreateCluster(handler func(cluster *entity.Cluster)) 
 	})
 }
 
-func (q *Queue) SubscribeToDeleteCluster(handler func(cluster *entity.Cluster)) error {
+func (q *Queue) SubscribeToDeleteCluster(handler func(cluster *value.ClusterMessage)) error {
 	return q.clusterSubscriber.Subscribe(DeleteCluster, "*", "deleteCluster", func(cluster *v1.Cluster) {
-		handler(&entity.Cluster{
+		handler(&value.ClusterMessage{
 			Id:             cluster.Id,
 			Name:           cluster.Name,
 			OrganizationId: cluster.OrganizationId,
@@ -107,13 +115,11 @@ func (q *Queue) SubscribeToDeleteCluster(handler func(cluster *entity.Cluster)) 
 	})
 }
 
-func (q *Queue) SubscribeToCreateProject(handler func(project *entity.Project)) error {
-	return q.projectSubscriber.Subscribe(CreateProject, "*", "createProject", func(project *v1.Project) {
-		handler(&entity.Project{
-			Id:             project.Id,
-			Name:           project.Name,
-			OrganizationId: project.OrganizationId,
-			ClusterId:      &project.ClusterId,
+func (q *Queue) SubscribeToDeployDatabase(handler func(deployment *value.DeploymentMessage)) error {
+	return q.deploymentSubscriber.Subscribe(DeployDatabase, "*", "deployDatabase", func(cluster *v1.Deployment) {
+		handler(&value.DeploymentMessage{
+			ClusterId: cluster.ClusterId,
+			Database:  value.Database(cluster.Database),
 		})
 	})
 }
