# server/internal/presentation/http/dto/response/cluster.go
@@ -1,26 +1,23 @@
 package response
 
 import (
-	"starliner.app/internal/domain/entity"
 	"starliner.app/internal/domain/value"
 )
 
-type Cluster struct {
-	Id             int64                `json:"id" binding:"required"`
-	Name           string               `json:"name" binding:"required"`
-	Status         entity.ClusterStatus `json:"status" binding:"required,oneof=pending running deleted"`
-	IPv4Address    *string              `json:"ipv4Address" binding:"required"`
-	OrganizationId int64                `json:"organizationId" binding:"required"`
-}
+type ClusterStatus string
 
-func NewCluster(cluster *value.Cluster) Cluster {
-	return Cluster{
-		Id:             cluster.Id,
-		Name:           cluster.Name,
-		Status:         cluster.Status,
-		IPv4Address:    cluster.IPv4Address,
-		OrganizationId: cluster.OrganizationId,
-	}
+const (
+	ClusterStatusPending ClusterStatus = "pending"
+	ClusterStatusRunning ClusterStatus = "running"
+	ClusterStatusDeleted ClusterStatus = "deleted"
+)
+
+type Cluster struct {
+	Id             int64         `json:"id" binding:"required"`
+	Name           string        `json:"name" binding:"required"`
+	Status         ClusterStatus `json:"status" binding:"required,oneof=pending running deleted"`
+	IPv4Address    *string       `json:"ipv4Address" binding:"required"`
+	OrganizationId int64         `json:"organizationId" binding:"required"`
 }
 
 func NewClusters(clusters []*value.Cluster) []Cluster {
@@ -29,4 +26,14 @@ func NewClusters(clusters []*value.Cluster) []Cluster {
 		res[i] = NewCluster(c)
 	}
 	return res
+}
+
+func NewCluster(cluster *value.Cluster) Cluster {
+	return Cluster{
+		Id:             cluster.Id,
+		Name:           cluster.Name,
+		Status:         ClusterStatus(cluster.Status),
+		IPv4Address:    cluster.IPv4Address,
+		OrganizationId: cluster.OrganizationId,
+	}
 }
